--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,62 @@
 body{
-    background-color: Gainsboro;
-    margin-left: 100px;
+    background-color: gainsboro;
+    margin: 0;
+    padding: 0;
+    
 }
 
-header{
-    margin-top:60px;
+.nav{
+    display: flex;
+    justify-content: space-around;
+    background: RoyalBlue;
+
+  
 }
 
-h1{
-    color: blue;
-    font-family: fantasy;
-}
-h2{
-    font-family: fantasy;
-    color: blue;
+.nav-list{
+    display: flex;
+    align-items:center;
+    list-style: none;
+    
+    
+   
+    
+    
 }
 
-p{
+.service{
+    margin-right: 35px;
+    
+        
+}
+
+.clientes{
+    margin-right: 35px;
+}
+
+.parceiros{
+    margin-right: 35px;
+}
+
+.contatos{
+    margin-right: 35px;
+}
+
+.logo{
+  
+    margin-left: -260px;
+    margin-top: 5px;
+    margin-bottom: 1,5px;
+      
+    
+}
+
+a{
+    color: gainsboro;
+    text-decoration: none;
+    font-weight: bold;
     font-size: 18px;
+    
+    
 }
 
-.img_email{
-    margin-bottom: 30px;
-}
-
-.img_fone{
-    margin-bottom: 30px;
-}
-
-footer{
-    margin-bottom:30px;
-}
