--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: gainsboro;
+    background-color: white;
     margin: 0;
     padding: 0;
     
@@ -60,3 +60,41 @@ a{
     
 }
 
+.card{
+    width: 300px;
+    height: 500px;
+    background-color: gainsboro;
+    border-radius: 15px;
+    margin-top:100px;
+    box-shadow: rgba(0,0,0,0.3) 0px 19px 38px, rgba(0,0,0,0.22) 0px 15px 12px;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+
+}
+
+
+.cliente01{
+    width: 180px;
+    height: 165px;
+    border-radius: 50%;
+    margin-top: 25px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
+h2{
+    margin-left: 52px;
+    font-family:'Poppins', sem serifa;
+}
+
+h3{
+    margin-left: 50px;
+    font-family:'Poppins', sem serifa;
+}
+
+
+    
