--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,34 @@
 body{
-    background-color: gainsboro;
     margin: 0;
     padding: 0;
-    
+    background-color: gray;  
 }
 
 .nav{
     display: flex;
     justify-content: space-around;
     background: RoyalBlue;
-
-  
 }
 
 .nav-list{
     display: flex;
     list-style: none;
-
-       
 }
 
 .logo{
-  
     margin-left: -260px;
     margin-top: 5px;
     margin-bottom: 1,5px;
-      
-    
+}
+
+.background{
+   width: 100%;
+   height: 100vh; 
+   background-image: url("../img/img_back.jpg");
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: center;
+
 }
 
 a{
@@ -53,9 +55,26 @@ h1{
     justify-content: center;
     margin-bottom: 62px;
     font-family: Arial, Helvetica, sans-serif;
-    color: royalblue;
+    color: gainsboro;
     font-size: 30px;
+    margin-top: 0px;
     
+}
+
+
+.coments{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.h1parc{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.h1contact{
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .cards{
@@ -67,7 +86,8 @@ h1{
 }
 
 .card{
-    background-color: gray;
+    background-image: url("../img/img_back.jpg");
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -91,5 +111,12 @@ p{
    font-size: 17px;
 }
 
-
+footer{
+    background-image: url("../img/img_back.jpg");
+    background-size: cover;
+    align-items: center;
+    padding: 30px;
+  
     
+}
+
