--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+*{
+    
+    box-sizing:border-box;
+   
+}
+
+
 body{
     margin: 0;
     padding: 0;
-    background-color: gray;  
+    background-color: gainsboro;
+    
+    
+     
 }
 
 .nav{
     display: flex;
     justify-content: space-around;
-    background: RoyalBlue;
+    background-image: url("../img/img_back.jpg") ;
+    background-size: cover;
+   
+    
 }
 
 .nav-list{
@@ -17,8 +32,8 @@ body{
 
 .logo{
     margin-left: -260px;
-    margin-top: 5px;
-    margin-bottom: 1,5px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .background{
@@ -28,16 +43,102 @@ body{
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
+   margin-top: -60px;
 
 }
 
+section .content .image{
+  height: 170px;
+  width: 185px;
+  padding: 3px;
+ 
+}
+
+
+
+section .content .image img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border: 4px solid gainsboro;
+    border-radius: 10px;
+    
+    
+    
+  }
+  
+
+  .content{
+    position: relative;
+    background-color: #fff;
+    border-radius: 20px;
+    margin: 20px 0 0;
+    
+    
+    
+    
+    
+   
+  }
+
+  .content::before{
+    content: "";
+    position: absolute;
+    height: 45%;
+    width: 100%;
+    background-image: url("../img/img_back.jpg");
+    background-size: c;
+    border-radius: 20px 20px 0 0;
+    
+    
+    
+    
+  }
+
+.content .cardcontent{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    position: relative;
+    z-index: 100;
+    width: 300px;
+    height: 320px;
+    
+    
+    
+    
+    
+}
+
+
+
+.descricao{
+text-align: center;
+font-size: 20;
+    
+}
+
+
+
+  .container{
+  
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 620px;
+    margin: 0 auto;
+    grid-gap: 40px ;
+     
+  }
+
+
 a{
-    color: gainsboro;
+    color: black;
     text-decoration: none;
     font-weight: bold;
     font-size: 18px;
     margin: 15px;
-    
+  
     
 }
 .card .user{
@@ -55,10 +156,9 @@ h1{
     justify-content: center;
     margin-bottom: 62px;
     font-family: Arial, Helvetica, sans-serif;
-    color: gainsboro;
+    color: rgb(37, 36, 36);
     font-size: 30px;
-    margin-top: 0px;
-    
+   
 }
 
 
@@ -98,9 +198,7 @@ h1{
     
 }
 
-h2{
-    color: royalblue;
-}
+
 
 h3{
     font-size: 27px;
@@ -111,6 +209,17 @@ p{
    font-size: 17px;
 }
 
+.coments{
+    background-image: url("../img/img_back.jpg");
+    background-size: cover;
+    width: 44%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 450px;
+    margin-left: 548px;
+   
+  
+}
 footer{
     background-image: url("../img/img_back.jpg");
     background-size: cover;
@@ -118,5 +227,28 @@ footer{
     padding: 30px;
   
     
+}
+.servicos{
+    background-image: url("../img/img_back.jpg");
+    background-size: cover;
+    margin-top: 40px;
+    width: 18%;
+    margin-left: 790px;
+}
+
+.service{
+    margin-top: 15px;
+}
+
+.clientes{
+    margin-top: 15px; 
+}
+
+.parceiros{
+    margin-top: 15px;
+}
+
+.contatos{
+    margin-top: 15px;
 }
 
