--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ body{
     justify-content: space-around;
     background-image: url("../img/img_back.jpg") ;
     background-size: cover;
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
    
     
 }
@@ -231,7 +235,8 @@ footer{
 .servicos{
     background-image: url("../img/img_back.jpg");
     background-size: cover;
-    margin-top: 40px;
+    margin-top: 130px;
+    margin-bottom: -20px;
     width: 18%;
     margin-left: 790px;
 }
@@ -252,3 +257,33 @@ footer{
     margin-top: 15px;
 }
 
+button{
+    background-image: url("../img/img_back.jpg");
+    color: white;
+    border-radius:7px;
+    padding: 7px;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+    
+    
+}
+
+
+
+@keyframes anima{
+    0%{
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(1.05);
+    }
+}
+
+button:hover{
+    animation-name: anima;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
