--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,6 @@ footer{
     margin-top: 15px;
     
 }
-
 button{
     background-image: url("../img/img_back.jpg");
     color: white;
@@ -269,9 +268,8 @@ button{
     border: none;
     cursor: pointer;
     font-size: 18px;
-    margin-top: 7px;
-    
-    
+   
+ 
 }
 
 
@@ -303,7 +301,8 @@ button:hover{
 }
 
 h2{
-    font-size: 30px;
+    font-size: 28px;
+    margin-bottom: 13px;
 }
 .contato{
     display: flex;
@@ -320,6 +319,7 @@ section form{
     display: flex;
     flex-direction: column;
     width: 100%;
+    
 }
 form label{
     font-size: 17px;
@@ -355,6 +355,8 @@ form button{
     color: #f5f5f5;
     transition: all 1s;
     margin-bottom: 20px;
+    color: #101026;
+   
 }
 form button:hover{
     background: #f5f5f5;
@@ -386,7 +388,17 @@ form button:hover{
      color: #101026;
      font-size: 18px;
      transition: all 0.5s;
+     
  }
  .btn:hover{
      border-radius: 16px;
+     
+ }
+
+ .teste{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
  }
